--- a/www/src/styles/game.css
+++ b/www/src/styles/game.css
@@ -14,7 +14,7 @@ body {
   height: 100%;
 }
 
-h1, h2, a {
+#menu h1, #menu h2, #menu a {
   color: white;
 }
 
@@ -64,4 +64,17 @@ ul.menu-options > li {
 
 #canvas {
   border: 1px solid black;
+}
+
+#canvas:focus {
+  outline: 0;
+}
+
+.controls {
+  display: flex;
+  justify-content: space-between;
+}
+
+.controls-section {
+  display: inline-block;
 }
