--- a/js/styles/game.css
+++ b/js/styles/game.css
@@ -22,11 +22,21 @@ a {
   text-decoration: none;
 }
 
+#wrapper {
+  width: 752px;
+}
+
+#game {
+  position: relative;
+  margin: 0 auto;
+  height: 552px;
+}
+
 #main {
   position: absolute;
-  width: 752px;
-  height: 552px;
   background: #1d0e53 url("../assets/main_bg.svg");
+  width: 100%;
+  height: 100%;
 }
 
 #menu {
